--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,102 @@
-- name: Minecraft Plugin Runtime Test
-  uses: FN-FAL113/minecraft-plugin-runtime-test@v1.1.7
+name: Build with Gradle and Do Runtime Test
+
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+    
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout Repository
+      uses: actions/checkout@v4
+      
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: 17
+        
+    - name: Setup Gradle
+      uses: gradle/gradle-build-action@v2
+        
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+        
+    - name: Gradle Build
+      run: ./gradlew clean jar
+      
+    - name: Upload the artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: artifact-${{ github.run_number }}
+        path: 'build/libs/InventorySwitcher*.jar'
+  
+  runtime-test:
+    name: Plugin Runtime Test 
+    needs: [build]
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          # Minecraft 1.18.x Serie - Java 17
+          - mcVersion: '1.18'
+            javaVersion: '17'
+          - mcVersion: '1.18.1'
+            javaVersion: '17'
+          - mcVersion: '1.18.2'
+            javaVersion: '17'
+          
+          # Minecraft 1.19.x Serie - Java 17
+          - mcVersion: '1.19'
+            javaVersion: '17'
+          - mcVersion: '1.19.1'
+            javaVersion: '17'
+          - mcVersion: '1.19.2'
+            javaVersion: '17'
+          - mcVersion: '1.19.3'
+            javaVersion: '17'
+          - mcVersion: '1.19.4'
+            javaVersion: '17'
+          
+          # Minecraft 1.20.x Serie - Java 17/21
+          - mcVersion: '1.20'
+            javaVersion: '17'
+          - mcVersion: '1.20.1'
+            javaVersion: '17'
+          - mcVersion: '1.20.2'
+            javaVersion: '17'
+          - mcVersion: '1.20.3'
+            javaVersion: '17'
+          - mcVersion: '1.20.4'
+            javaVersion: '17'
+          - mcVersion: '1.20.5'
+            javaVersion: '21'
+          - mcVersion: '1.20.6'
+            javaVersion: '21'
+          
+          # Minecraft 1.21.x Serie - Java 21
+          - mcVersion: '1.21'
+            javaVersion: '21'
+          - mcVersion: '1.21.1'
+            javaVersion: '21'
+          - mcVersion: '1.21.2'
+            javaVersion: '21'
+          - mcVersion: '1.21.3'
+            javaVersion: '21'
+          - mcVersion: '1.21.4'
+            javaVersion: '21'
+          - mcVersion: '1.21.7'
+            javaVersion: '21'
+    
+    steps:        
+      - uses: FN-FAL113/minecraft-plugin-runtime-test@v1.1.2
+        with:
+          server-version: ${{ matrix.mcVersion }}
+          java-version: ${{ matrix.javaVersion }}
+          artifact-name: artifact-${{ github.run_number }}
